--- a/secciones/capitulo6.tex
+++ b/secciones/capitulo6.tex
@@ -16,7 +16,7 @@ Los experimentos se realizaron bajo las siguientes condiciones controladas:
 
 La evaluación se estructura en dos fases: determinación del rendimiento máximo (Peak Performance) y análisis de estabilidad ante la variación del tamaño de la galería.
 
-\subsection{Desempeño Óptimo (Peak Performance)}
+\subsection{Desempeño Óptimo \textit{(Peak Performance)}}
 En la configuración experimental con la población base de 60 sujetos, el modelo híbrido alcanzó los siguientes resultados:
 \begin{itemize}
     \item \textbf{Rank-1 Accuracy:} 91.29\%
