--- a/secciones/conclusiones.tex
+++ b/secciones/conclusiones.tex
@@ -6,7 +6,7 @@ La presente investigación logró desarrollar y validar una arquitectura híbrid
 Se concluye que el enfoque híbrido propuesto supera las barreras de los métodos tradicionales en contextos de datos limitados, alcanzando una precisión sobresaliente de \textbf{91.29\% en Rank-1}. Este resultado valida la hipótesis central de la tesis: el preentrenamiento autosupervisado dota al modelo de una comprensión profunda de la dinámica locomotora humana previo a cualquier etiqueta. Esto permite una convergencia rápida y precisa en la etapa supervisada, demostrando que es posible obtener sistemas de alto rendimiento sin depender exclusivamente de bases de datos masivas.
 
 \section{Alta Capacidad Discriminativa y Priorización de Identidad}
-El análisis de las métricas revela que el modelo ha desarrollado una alta especialización en la discriminación de identidades, priorizando la recuperación inmediata del sujeto objetivo (Rank-1 > 90\%). Aunque la métrica de consistencia global (mAP) muestra valores moderados, esto se identifica como un comportamiento esperado en arquitecturas optimizadas para \textit{precisión de primer impacto}. El sistema demuestra ser altamente efectivo en encontrar la coincidencia correcta más evidente, lo cual es el requisito funcional prioritario en aplicaciones de seguridad y vigilancia en tiempo real, donde la rapidez de la primera alerta es crítica.
+El análisis de las métricas revela que el modelo ha desarrollado una alta especialización en la discriminación de identidades, priorizando la recuperación inmediata del sujeto objetivo (Rank-1 \textgreater  90\%). Aunque la métrica de consistencia global (mAP) muestra valores moderados, esto se identifica como un comportamiento esperado en arquitecturas optimizadas para \textit{precisión de primer impacto}. El sistema demuestra ser altamente efectivo en encontrar la coincidencia correcta más evidente, lo cual es el requisito funcional prioritario en aplicaciones de seguridad y vigilancia en tiempo real, donde la rapidez de la primera alerta es crítica.
 
 \section{Estabilidad y Escalabilidad del Modelo}
 El modelo demostró una notable robustez ante el aumento de la complejidad del espacio de búsqueda. Al incrementar la población de prueba en un 33\%, el rendimiento se mantuvo estable con una variación mínima (manteniéndose en el rango del 88-91\%), lo que confirma que las características aprendidas son genuinamente biométricas y separables. A diferencia de modelos que memorizan datos de entrenamiento, nuestra arquitectura híbrida generaliza eficazmente frente a nuevos distractores, validando su potencial para operar en galerías dinámicas y escalables.
